fixed box alignment

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -483,7 +483,7 @@ footer {
 
         .box {
           display: flex;
-          justify-content: center;
+          justify-content: start;
           align-items: start;
           flex-direction: column;
           text-align: left;
